# zephyrproject-rtos-eez-lvgl

./: .gitmodules  CMakeLists.txt  README.md  README.rst  prj.conf
src/: main.c
src/hello_eez/: hello_eez.eez-project  hello_eez.eez-project-ui-state
src/low_res_iot/: low_res_iot.eez-project
src/ui/: actions.h  flow_def.c  flow_def.h  fonts.h  images.c  images.h  screens.c  screens.h  ui.h  ui_font_bold_17.c  ui_font_bold_21.c  ui_font_bold_23.c  ui_font_regular_16.c  ui_font_regular_21.c  ui_font_regular_36.c  ui_image_account_box.c  ui_image_arrow_account.c  ui_image_arrow_account_hoover.c  ui_image_arrow_next.c  ui_image_arrow_next_hover.c  ui_image_arrow_prev.c  ui_image_arrow_prev_hoover.c  ui_image_big_checkmark.c  ui_image_button_main.c  ui_image_checkmark.c  ui_image_face_0.c  ui_image_face_1.c  ui_image_face_2.c  ui_image_garage_arrows.c  ui_image_garage_arrows_hoover.c  ui_image_header_menu.c  ui_image_heating_button.c  ui_image_heating_button_hoover.c  ui_image_light_bulb.c  ui_image_lighting_button.c  ui_image_lighting_button_hoover.c  ui_image_logo_eez.c  ui_image_logo_lvgl.c  ui_image_power_background.c  ui_image_save.c  (+12 more)
